<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mainButtonList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="Lista Luoghi Di Interesse"
        android:backgroundTint="@color/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/mainTableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar"
        android:onClick="startList"/>

    <TableLayout
        android:id="@+id/mainTableLayout"
        android:layout_width="320dp"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainButtonList">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/mainCardEdificiReligiosi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:onClick="startList">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mainImageEdificiReligiosi"
                        android:layout_width="160dp"
                        android:layout_height="130dp"
                        app:srcCompat="@drawable/edificireligiosi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnReligiosi"
                        android:textColor="@color/black"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/mainCardEdificiStorici"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:onClick="startList">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mainImageEdificiStorici"
                        android:layout_width="140dp"
                        android:layout_height="130dp"
                        app:srcCompat="@drawable/edificistorici" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnStorici"
                        android:textColor="@color/black"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/mainCardMostre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:onClick="startList">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mainImageMostre"
                        android:layout_width="160dp"
                        android:layout_height="130dp"
                        app:srcCompat="@drawable/mostre" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnMostre"
                        android:textColor="@color/black"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/mainCardMusei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:onClick="startList">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mainImageMusei"
                        android:layout_width="160dp"
                        android:layout_height="130dp"
                        app:srcCompat="@drawable/musei" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnMusei"
                        android:textColor="@color/black"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/mainCardEventiCulturali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:onClick="startList">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mainImageEventiCulturali"
                        android:layout_width="160dp"
                        android:layout_height="130dp"
                        app:srcCompat="@drawable/eventiculturali" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnEventiCulturali"
                        android:textColor="@color/black"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/mainCardParchi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:onClick="startList">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mainImageParchi"
                        android:layout_width="160dp"
                        android:layout_height="130dp"
                        app:srcCompat="@drawable/parchi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnParchi"
                        android:textColor="@color/black"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>